--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/vue-codemod/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.f6e52130.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.ac37d352.js">
-    <link rel="stylesheet" href="/assets/index.fcaeac51.css">
+    <script type="module" crossorigin src="/vue-codemod/assets/index.f6e52130.js"></script>
+    <link rel="modulepreload" href="/vue-codemod/assets/vendor.ac37d352.js">
+    <link rel="stylesheet" href="/vue-codemod/assets/index.fcaeac51.css">
   </head>
   <body>
     <div id="app"></div>
