--- a/packages/playground/index.html
+++ b/packages/playground/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Vue codemod</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="empty-loading">
+        <img src="/loading.gif" alt="loading...">
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+  <style>
+    .empty-loading {
+      text-align: center;
+    }
+    .empty-loading img {
+      margin-top: 40vh;
+    }
+  </style>
 </html>
