--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/vue-codemod/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/vue-codemod/assets/index.f6e52130.js"></script>
-    <link rel="modulepreload" href="/vue-codemod/assets/vendor.ac37d352.js">
-    <link rel="stylesheet" href="/vue-codemod/assets/index.fcaeac51.css">
+    <title>Vue codemod</title>
+    <script type="module" crossorigin src="/vue-codemod/assets/index.3327453d.js"></script>
+    <link rel="modulepreload" href="/vue-codemod/assets/vendor.0b0ce47f.js">
+    <link rel="stylesheet" href="/vue-codemod/assets/index.6f8bac2a.css">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="empty-loading">
+        <img src="/vue-codemod/loading.gif" alt="loading...">
+      </div>
+    </div>
     
   </body>
+  <style>
+    .empty-loading {
+      text-align: center;
+    }
+    .empty-loading img {
+      margin-top: 40vh;
+    }
+  </style>
 </html>
