--- a/packages/playground/index.html
+++ b/packages/playground/index.html
@@ -17,6 +17,7 @@
   <style>
     .empty-loading {
       text-align: center;
+      width: 100%;
     }
     .empty-loading img {
       margin-top: 40vh;
