--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <style>
     .empty-loading {
       text-align: center;
+      width: 100%;
     }
     .empty-loading img {
       margin-top: 40vh;
